basic inquirer & first option

--- a/package.json
+++ b/package.json
@@ -1,4 +1,28 @@
 {
+  "name": "develop",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^8.2.4"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NicolasFlamel/Employee-Database-Tracker.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NicolasFlamel/Employee-Database-Tracker/issues"
+  },
+  "homepage": "https://github.com/NicolasFlamel/Employee-Database-Tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
     "inquirer": "^8.2.4",
