--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/inquirer": "^8.2.4"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
